--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.7",
     "swr": "^2.2.0"
   },
   "devDependencies": {
