--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
+    "@types/react-highlight-words": "^0.20.0",
+    "@types/react-responsive": "^8.0.8",
     "@uiw/react-codemirror": "^4.21.9",
-    "antd": "^5.7.3",
+    "antd": "^5.18.3",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.15.0",
     "ky": "^0.33.3",
     "ky-universal": "^0.12.0",
     "lucide-react": "^0.263.1",
-    "next": "13.4.12",
+    "next": "^13.5.6",
     "next-auth": "^4.22.3",
     "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0",
+    "react-highlight-words": "^0.20.0",
+    "react-quill": "^0.0.2",
+    "react-responsive": "^10.0.0",
+    "react-table": "^7.8.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.0"
   },
@@ -35,6 +40,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/react-table": "^7.7.20",
     "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
