--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
+    "@supabase/supabase-js": "^2.44.2",
     "@types/react-highlight-words": "^0.20.0",
     "@types/react-responsive": "^8.0.8",
     "@uiw/react-codemirror": "^4.21.9",
